--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,5 +1,40 @@
 .header {
     width: 100%;
     height: 60px;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 1000;
+    position: fixed;
+
+    box-shadow: -2px 0px 8px 2px rgba(0, 0, 0, 0.10);
+    background-color: transparent;
+    backdrop-filter: blur(10px)
 }
+
+.container {
+    width: 80%;
+    height: 82%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navs {
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content:  space-between;
+    align-items: center;
+
+
+}
+
+.navs a {
+    font-family: Karla;
+    color: #000;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 700;
+}
+
